--- a/NonConditional/HypothesisConstruction.tex
+++ b/NonConditional/HypothesisConstruction.tex
@@ -4,12 +4,12 @@
 \begin{document}
 
 
-	Up until now we have only discussed how to acquire knowledge about the action schemas, but it is equally important to discuss how to utilize the knowledge when construction an hypothetical action schema.
+	Up until now we have only discussed how to acquire knowledge about the action schemas, but it is equally important to discuss how to utilize the knowledge when constructing a hypothetical action schema.
 	We refer to this as hypothesis construction of the domain as we are making assumptions about what the domain could be.
 	The design of the hypothesis determines the strategy of an agent, which impacts what it is capable of learning in the future.
-	For instance if the hypothesis is based mostly on proven knowledge, the agent will never experience an unfamiliar situation and thus will never learn something new.
+	% For instance, if the hypothesis is based mostly on proven knowledge, the agent will never experience an unfamiliar situation and thus will never learn something new.
 
-	In Chapter~\ref{sec:Learning} we went through examples of different strategies in this section we will show how that can be put to practice for STRIPS-style action schema, and what it means to the action schema itself.
+	In Chapter~\ref{sec:Learning} we went through examples of different strategies. In this section we will show how that can be put to practice for STRIPS-style action schema, and what it means for the action schema itself.
 	Furthermore, this section will also show the dichotomy between using unproven preconditions and unproven effects and how to manipulate the traits of a given strategy by changing these.
 
 	As both preconditions and effects use \Pro, \Dsp and \Up we use that notation of saying $\Dsp_P$, $\Pro_P$ $\dots$ for preconditions and
