--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -270,61 +270,67 @@ If the arguments given to an action $A$ are all unique, then $\ground$ is inject
 	As we have proved that $\ground$ can never output to the same grounded atom, for two different atom when the action arguments are unique. Then it follows that $\ground$ must be an injective function by definition.
 \end{proof}
 
-On a side note, this means it is preferable to an agent to try actions where the arguments to that action are all unique. 
+On a side note, this means it is preferable for an agent to try actions where the arguments to that action are all unique. 
 
 If however only some of the arguments are unique, then we should still be able to prove some of the atoms, provided all other atoms that map from the same grounded atom have been disproved. We can do this by using our disproved set \Dsp, built from earlier transitions, to discard incorrect atoms. This gives us the following theorem: 
 
 \begin{theorem} For a state-transition $(S,a,S')$ with 
 	\begin{equation*}
-	\Delta S = S' \setminus S \cup \{\neg p \mid  p \in S \setminus S' \}
+	\Delta S = \left(S' \setminus S\right) \cup \{\neg p \mid  p \in S \setminus S' \}
 	\end{equation*}
 	
-	then, 
-	 $\forall_{p \in \Delta S}$ it holds that:
+	then, for all $p \in \geffects$, the following holds:
 	
-	If $\invground$ is single-valued or it is multivalued but all except one output have been disproved, then that the literal outputted by $\invground$ is proved to be an effect.
+    \begin{itemize}
+        \item If \invground is single-valued, then $\invground(p)$ is an effect of $A$.
+        \item If \invground is multivalued but there is a single atom in $\invground(p)$ that have not previously been disproven to be an effect, then that atom is an effect.
+    \end{itemize}
+
+	% If $\invground$ is single-valued or it is multivalued but all except one output are disproven, then that the literal outputted by $\invground$ is proven to be an effect.
 	We can write this as a function:
 	
 	\begin{equation*}
-	\pro(\Delta S) = 
+	\pro(\geffects) = 
 	\left\{
-		p \mid 
-				p_g \in \Delta S \land 
-				\ground(p_g) \setminus \Dsp = \{p\}
+		p' \mid 
+				p \in \geffects \land 
+				\invground(p) \setminus \Dsp = \{p'\}
 		\right\}
 	\end{equation*}
-	where $\Dsp$ is the set of disproved literals that the agent already knows about.
-	
-	\begin{proof}
-		If $\invground$ is single-valued then that means only one atom can produce the grounded atom observed in the state, therefore that atom must be an actual effect.
-		If $\invground$ is multivalued but all other outputs have been disproved then as before only one atom can produce the grounded atom, giving us the same result which is that, the atom is an actual effect.
-	\end{proof}
+	where $\Dsp$ is the set of disproven literals that the agent already knows about.
 \end{theorem}
+	
+\begin{proof}
+    We prove the two cases described above:
+    \begin{itemize}
+        \item If $\invground$ is single-valued, then $\invground (p)$ is the only atom in $A$ that could have caused $p$ to occur in $S'$.
+        \item If $\invground$ is multivalued, then it is generally not known which atom(s) caused $p$ to occur in $S'$. However, if all atoms except one in $\invground\left( p \right)$ have previously been disproven to be effect, then that single atom must be an effect. 
+    \end{itemize}
+\end{proof}
 
 \begin{example}[Proving effects in \texttt{move-h}] \label{ex:nca:moveSucceeded-proving-effects}
-	Following from Example \ref{ex:nca:moveSucceeded-disproving-effects}
-	We have $S_0$, $S_1$ and \lits.
+	Consider the states $S_0$ and $S_1$ from Example~\ref{ex:nca:moveSucceeded-disproving-effects}. Then, $\geffects$ can be found as follows:
 	
 	\begin{equation*}
-	\begin{split}
-	\Delta S &=
-	\left\{
-	\begin{gathered}
-	\texttt{sokobanAt}(t_2), \\
-	\texttt{clear}(t_1), \\
-	\neg \texttt{clear}(t_2)		
-	\end{gathered}
-	\right\} \\	
-	\pro(\Delta S) &= \left\{
-	\begin{gathered}
-	\texttt{sokobanAt}(to), \\
-	\texttt{clear}(from), \\
-	\neg \texttt{clear}(to)		
-	\end{gathered}
-	\right\}
-	\end{split}
+	\Delta S = \left\{
+        \begin{gathered}
+            \texttt{sokobanAt}(t_2), \\
+            \texttt{clear}(t_1), \\
+            \neg \texttt{clear}(t_2)		
+        \end{gathered}
+        \right\}
 	\end{equation*}
-	We see that effects are correctly proven, such a proving the action actually moves sokoban to a new location i.e. $\texttt{sokobanAt}(to)$.
+And the known knowledge can be extracted as
+    \begin{equation*}
+        \pro(\Delta S) = \left\{
+            \begin{gathered}
+                \texttt{sokobanAt}(to), \\
+                \texttt{clear}(from), \\
+                \neg \texttt{clear}(to)		
+            \end{gathered}
+        \right\}
+    \end{equation*}
+	We see that effects are correctly proven. For example, the fact that the sokoban moves to a new location is correctly proved by $\texttt{sokobanAt}(to)$.
 \end{example}
 
 \end{document}
