--- a/Master.tex
+++ b/Master.tex
@@ -86,6 +86,8 @@
 \newcommand{\pc}{\ensuremath{\times}\xspace}
 % Symbol for a binding connection
 \newcommand{\bc}{\ensuremath{\bullet}\xspace}
+
+\newcommand{\rsc}{\ensuremath{\otimes}\xspace}
 % Symbol for atoms
 \newcommand{\atoms}{\ensuremath{\mathbb{A}}\xspace}
 
